# image-optimizer

./: .gitignore  README.md  build.py  build_windows.bat  mediamanager.spec  mediamanager_onefile.spec  pyproject.toml  requirements-build.txt  requirements.txt  setup.bat  setup.sh
.github/workflows/: build-windows.yml
docs/: CLI.md  Install.md  Project_Report.md
hooks/: hook-customtkinter.py  rthook_ctk_fix.py
image_optimizer/: __main__.py
image_optimizer/cli/: __init__.py  app.py  formatters.py
image_optimizer/cli/commands/: bulk.py  compress.py  convert.py  crop.py  favicon.py  metadata.py  resize.py  thumbnail.py
image_optimizer/core/: __init__.py  bulk.py  compressor.py  constants.py  converter.py  cropper.py  favicon.py  image_io.py  metadata.py  pipeline.py  resizer.py  thumbnail.py  types.py  utils.py  validation.py
image_optimizer/gui/: __init__.py  app.py  profiles.py  scrollable_mixin.py  workers.py
image_optimizer/gui/components/: crop_canvas.py  error_dialog.py  (+6 more)
mediamanager/: __init__.py  __main__.py
mediamanager/cli/: app.py  formatters.py
mediamanager/core/: bulk.py  compressor.py  constants.py  converter.py  favicon.py  image_io.py  metadata.py  pipeline.py  resizer.py  thumbnail.py  types.py  utils.py  validation.py
mediamanager/gui/: __init__.py  app.py  field_defs.py  profiles.py  theme.py  workers.py
tests/: conftest.py  test_bulk.py  test_bulk_process.py  test_cli.py  test_compressor.py  test_converter.py  test_favicon.py  test_image_io.py  test_metadata.py  test_pipeline.py  test_resizer.py  test_thumbnail.py  test_validation.py
(+29 files in other folders)
