[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediamanager"
version = "1.0.0"
description = "Image optimizer tool for web developers"
requires-python = ">=3.10"
authors = [
    { name = "Hency Prajapati", email = "hency@knownclick.com" },
]
maintainers = [
    { name = "Known Click Technologies" },
]
dependencies = [
    "Pillow>=10.0",
    "piexif>=1.1.3",
    "click>=8.1",
    "customtkinter>=5.2",
]

[project.optional-dependencies]
avif = ["pillow-avif-plugin>=1.5"]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
mediamanager = "mediamanager.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mediamanager*"]
